# ALP

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  sdk_quickstart.ipynb
docs/: README.md  alp_research_notes.md
missions/: example_mission.py
notebooks/: Main.ipynb  hello_world.ipynb  sdk_SampleMission.ipynb
routines/: __init__.py  sdk_routine.py
src/: hello.py
src/darknessalp/: __init__.py  __main__.py  models.py  say_hello.py  simulation.py
src/routines/: __init__.py  sample_dipole_magnetic_field.py  sample_igrf13_magnetic_field.py
tests/: test_simulation.py
