[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "darknessalp"
version = "0.1.0"
description = "Minimal LEO orbit simulation scaffold for ALP CONOPS studies"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "phi-a" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

